--- a/.jshintrc
+++ b/.jshintrc
@@ -7,6 +7,7 @@
 	"globalstrict": true,
 	"globals":
 	{
+		"CurrentAppID": true,
 		"GetCurrentAppID": false,
 		"GetHomepage": false,
 		"GetOption": false,
